Unreleased
	* mergedirs: Add `--keep-going` as synonym for `--continue-on-error`

Version 0.2 21 Jan 2024 by luispedro
	* mergedirs: Add `--mtime-ignore-subsecond` flag
	* build: Switch to Github actions
	* mergedirs: Add --set-oldest flag
	* hash-mode: Switch output of hashing mode to print hash first (like `md5sum` and
	friends)
	* mergedirs: Add --pre-hash flag for magnetic disks

Version 0.1
	* --verbose
	* --remove-only option
	* --ignore-flags option